# FlowyForge

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: local_mac.yaml  lxplus_eos.yaml
configs/models/: foundation_tiny.yaml  graph_transformer.yaml  mlp.yaml  tiny_transformer.yaml
configs/paths/: eos.yaml  hf_collide1m.yaml  local.yaml
configs/tasks/: calo_generation.yaml  classification.yaml  masked_modeling.yaml  trigger.yaml
docs/: collide_data_backends.md  decisions.md  eos_dataset_layout.md  evaluation.md  hf_multi_process_classification.md  hf_smoke_pipeline.md  notebooks.md  pipeline_explained.md  preprocessing.md  questions_for_experts.md  training.md  vectorialization.md  vectorization.md
notebooks/: 00_hf_collide1m_quickstart.ipynb
scripts/: evaluate_task.py  inspect_dataset.py  list_hf_collide_dirs.py  make_quick_plots.py  make_tiny_parquet_sample.py  prepare_collide_source.py  preprocess_collide.py  run_hf_smoke_pipeline.py  train_task.py  vectorize_collide.py
src/flowyforge/: __init__.py
src/flowyforge/analysis/: inspect.py  plotting.py  (+1 more)
tests/: test_classification_evaluation.py  test_classification_training.py  test_collide_source_resolver.py  test_collide_v2_inspection.py  test_config.py  test_hf_config_loads.py  test_hf_dir_listing.py  test_hf_materialization_summary.py  test_hf_multi_process_materialization.py  test_hf_smoke_pipeline.py  test_manifest_generation.py  test_model_plugins.py  test_pipeline_checks.py  test_pploner_adapter.py  test_preprocessing.py  test_registry.py  test_task_plugins.py  test_vectorization.py
(+46 files in other folders)
