[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flowyforge"
version = "0.1.0"
description = "Modular foundation platform skeleton for complex scientific data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml",
  "numpy",
  "pandas",
  "pyarrow",
  "matplotlib",
  "scikit-learn",
  "torch",
  "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

